gccida/c2/shallow_copy_rtx
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:993:18: error: expected expression
v16 = *( _OWORD *)&orig[v14 + 1].fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:993:10: error: use of undeclared identifier '_OWORD'
v16 = *( _OWORD *)&orig[v14 + 1].fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:994:12: error: expected expression
*( _OWORD *)&result[v14].fld[0].rtwint = *( _OWORD *)&orig[v14].fld[0].rtwint; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:994:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14].fld[0].rtwint = *( _OWORD *)&orig[v14].fld[0].rtwint; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:994:53: error: expected expression
*( _OWORD *)&result[v14].fld[0].rtwint = *( _OWORD *)&orig[v14].fld[0].rtwint; 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:994:45: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14].fld[0].rtwint = *( _OWORD *)&orig[v14].fld[0].rtwint; 
                                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:995:12: error: expected expression
*( _OWORD *)&result[v14 + 1].fld[0].rtwint = v16; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:995:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14 + 1].fld[0].rtwint = v16; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:996:18: error: expected expression
v17 = *( _OWORD *)&orig[v14 + 3].fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:996:10: error: use of undeclared identifier '_OWORD'
v17 = *( _OWORD *)&orig[v14 + 3].fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:997:12: error: expected expression
*( _OWORD *)&result[v14 + 2].fld[0].rtwint = *( _OWORD *)&orig[v14 + 2].fld[0].rtwint; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:997:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14 + 2].fld[0].rtwint = *( _OWORD *)&orig[v14 + 2].fld[0].rtwint; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:997:57: error: expected expression
*( _OWORD *)&result[v14 + 2].fld[0].rtwint = *( _OWORD *)&orig[v14 + 2].fld[0].rtwint; 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:997:49: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14 + 2].fld[0].rtwint = *( _OWORD *)&orig[v14 + 2].fld[0].rtwint; 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:998:12: error: expected expression
*( _OWORD *)&result[v14 + 3].fld[0].rtwint = v17; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:998:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result[v14 + 3].fld[0].rtwint = v17; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:999:18: error: expected expression
v18 = *( _OWORD *)&orig[v14 + 5].fld[0].rtwint; 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:999:10: error: use of undeclared identifier '_OWORD'
v18 = *( _OWORD *)&orig[v14 + 5].fld[0].rtwint; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/rtl.c:1000:12: error: expected expression
*( _OWORD *)&result[v14 + 4].fld[0].rtwint = *( _OWORD *)&orig[v14 + 4].fld[0].rtwint; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shallow_copy_rtx/src/obj/rtl.o] Error 1
